# reasonable-fidelity

./: .gitignore  LICENSE  Makefile  README.md  compare_json_files.sh  dune-project  reasonable-fidelity.opam
config/: default.cfg  default.toml  ignored.attributes  ignored.endpoints
lib/: Config.re  Plugins.re  Run.re  Web.re  dune
plugins/: demo.py  demotoo.py
src/: CfrIO.re  Config.re  Entities.re  Helpers.re  Plugins.re  Web.re  WebContext.re  dead_code.re  editor.re  jbuild  main.re  run.re
test/: RunTests.re  TestFramework.re  dune
