opam-version: "1.2"
name: "reasonable-fidelity"
version: "0.0.1"
maintainer: "Chris F Ravenscroft <chris@voilaweb.com>"
authors: [
  "Chris F Ravenscroft <chris@voilaweb.com>"
]
license: "Apache"
homepage: "https://github.com/fusion/reasonable-fidelity"
bug-reports: "https://github.com/fusion/reasonable-fidelity/issues"
tags: [ "reason" "automation" ]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
  "jbuilder" {build}
  "reason"  {= "3.0.4"}
  "re"
  "lwt"
  "cohttp"
  "cohttp-lwt-unix"
  "yojson"
  "str"
  "config-file"
]
available: [ ocaml-version >= "4.02" & ocaml-version < "4.05" ]
